--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ flutter:
     - assets/pedra.png
     - assets/papel.png
     - assets/tesoura.png
+    - assets/fundo.png
+    - assets/wallpaper.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
