--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   provider: ^6.0.3
+  mocktail: ^0.3.0
 
 dev_dependencies:
   flutter_test:
