--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.3
   mocktail: ^0.3.0
+  mockingjay: ^0.3.0
 
 dev_dependencies:
   flutter_test:
