--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -24,6 +24,8 @@ jobs:
           restore-keys: ${{ runner.os }}-pub-
       
       - run: flutter pub get
+      - run: flutter analyze --fatal-warnings
+      - run: flutter test
       - run: flutter build web --release
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
